collect fix